--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_lrc_control_view.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_lrc_control_view.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-                android:textColor="@color/def_text_grey_979"
+                android:textColor="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
