[singRelay] remove useless logic

--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_game_idle_view.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_game_idle_view.xml
@@ -19,17 +19,18 @@
         android:textSize="10sp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/ivGameTips"
         android:layout_width="0dp"
-        android:layout_height="110dp"
+        android:layout_height="120dp"
         android:background="@mipmap/ktv_game_tips"
         android:layout_marginTop="8dp"
         android:layout_marginHorizontal="10dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
