optimize sing relay logic

--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -89,14 +89,14 @@
         android:paddingTop="4dp"
         android:paddingEnd="10dp"
         android:paddingBottom="10dp"
-        app:currentLineHighlightedTextColor="@color/pink_b4"
+        app:currentLineHighlightedTextColor="@color/ktv_lrc_color"
         app:currentLineTextColor="@color/white"
-        app:currentLineTextSize="16sp"
+        app:currentLineTextSize="18sp"
         app:labelWhenNoLyrics=" "
-        app:layout_constraintBottom_toTopOf="@+id/bgd_control_layout_lrc"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scoringView"
         app:layout_constraintVertical_bias="0.0"
-        app:lineSpacing="6dp"
+        app:lineSpacing="7dp"
         app:paddingTop="2dp"
         app:startOfVerseIndicatorPaddingTop="6dp"
         app:startOfVerseIndicatorRadius="4dp"
@@ -117,7 +117,7 @@
         android:layout_width="26dp"
         android:layout_height="36dp"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="5dp"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
@@ -144,7 +144,7 @@
         android:layout_width="26dp"
         android:layout_height="36dp"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="5dp"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
@@ -170,7 +170,7 @@
         android:layout_width="26dp"
         android:layout_height="36dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="5dp"
         android:background="@null"
         android:checkable="true"
         android:insetLeft="0dp"
