--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_lrc_control_view.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_lrc_control_view.xml
@@ -32,9 +32,13 @@
             <TextView
                 android:id="@+id/tvMusicName"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginTop="6dp"
+                android:layout_marginStart="6dp"
                 android:textColor="@color/white"
+                android:drawableStart="@mipmap/ic_music_name"
+                android:textSize="12sp"
+                android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,7 +47,7 @@
                 android:layout_width="12dp"
                 android:layout_height="12dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="4dp"
+                android:layout_marginEnd="8dp"
                 android:contentDescription="Grade"
                 android:visibility="invisible"
                 app:layout_constraintEnd_toStartOf="@id/tvCumulativeScore"
@@ -54,6 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
+                android:layout_marginEnd="4dp"
                 android:text="0"
                 android:textColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,8 +67,8 @@
             <io.agora.scene.ktv.singrelay.widget.lrcView.GradeView
                 android:id="@+id/grade_view"
                 android:layout_width="match_parent"
-                android:layout_height="12dp"
-                android:layout_marginTop="4dp"
+                android:layout_height="14dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvMusicName" />
