--- a/Android/scenes/ktv_relay/src/main/res/values/colors.xml
+++ b/Android/scenes/ktv_relay/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="ktv_grade_view_content_gray">#4DFFFFFF</color>
     <color name="ktv_list_empty">#4D5D73</color>
     <color name="ktv_dialog_music_list_empty">#7E7E7E</color>
+    <color name="ktv_lrc_color">#EEFF25</color>
 </resources>
