--- a/Android/scenes/show/src/main/res/layout/show_setting_preset_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_setting_preset_dialog.xml
@@ -227,134 +227,6 @@
                 android:padding="20dp">
 
                 <TextView
-                    android:id="@+id/basicTvTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/show_network_quailty"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/basicTvDescription"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="@string/show_network_quailty_tips"
-                    android:textColor="#3C4267"
-                    android:textSize="13sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/basicTvTitle" />
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/basicChooseItemGoodNetwork"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="15dp"
-                    android:background="@drawable/show_setting_preset_item_bg"
-                    android:paddingHorizontal="16dp"
-                    android:paddingVertical="14dp"
-                    app:layout_constraintTop_toBottomOf="@id/basicTvDescription">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="@string/show_network_quailty_good"
-                        android:textColor="#040A25"
-                        android:textSize="14sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/basicLowDeviceDes"
-                        android:layout_width="130dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:drawableStart="@mipmap/show_setting_preset_ic_android"
-                        android:drawablePadding="5dp"
-                        android:gravity="center_vertical"
-                        android:text="@string/show_network_quailty_good_tag"
-                        android:textColor="#6D7291"
-                        android:textSize="12sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_marginStart="5dp"
-                        android:background="@drawable/show_setting_preset_recommend_bg"
-                        android:gravity="center"
-                        android:paddingHorizontal="6dp"
-                        android:text="@string/show_setting_preset_recommend"
-                        android:visibility="gone"
-                        android:textColor="#CE27FB"
-                        android:textSize="12sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/basicLowDeviceDes"
-                        app:layout_constraintStart_toEndOf="@id/basicLowDeviceDes"
-                        app:layout_constraintTop_toTopOf="@id/basicLowDeviceDes" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/basicChooseItemNormalNetwork"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/show_setting_preset_item_bg"
-                    android:paddingHorizontal="16dp"
-                    android:paddingVertical="14dp"
-                    app:layout_constraintTop_toBottomOf="@id/basicChooseItemGoodNetwork">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="@string/show_network_quailty_normal"
-                        android:textColor="#040A25"
-                        android:textSize="14sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:layout_width="130dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:drawableStart="@mipmap/show_setting_preset_ic_android"
-                        android:drawablePadding="5dp"
-                        android:gravity="center_vertical"
-                        android:text="@string/show_network_quailty_normal_tag"
-                        android:textColor="#6D7291"
-                        android:textSize="12sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/show_setting_preset_group_bg"
-                android:padding="20dp">
-
-                <TextView
                     android:id="@+id/broadcastStrategyTvTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -462,6 +334,135 @@
                         android:drawablePadding="5dp"
                         android:gravity="center_vertical"
                         android:text="清晰优先"
+                        android:textColor="#6D7291"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/networkView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/show_setting_preset_group_bg"
+                android:padding="20dp">
+
+                <TextView
+                    android:id="@+id/basicTvTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/show_network_quailty"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/basicTvDescription"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/show_network_quailty_tips"
+                    android:textColor="#3C4267"
+                    android:textSize="13sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/basicTvTitle" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/basicChooseItemGoodNetwork"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/show_setting_preset_item_bg"
+                    android:paddingHorizontal="16dp"
+                    android:paddingVertical="14dp"
+                    app:layout_constraintTop_toBottomOf="@id/basicTvDescription">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="@string/show_network_quailty_good"
+                        android:textColor="#040A25"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/basicLowDeviceDes"
+                        android:layout_width="130dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:drawableStart="@mipmap/show_setting_preset_ic_android"
+                        android:drawablePadding="5dp"
+                        android:gravity="center_vertical"
+                        android:text="@string/show_network_quailty_good_tag"
+                        android:textColor="#6D7291"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="5dp"
+                        android:background="@drawable/show_setting_preset_recommend_bg"
+                        android:gravity="center"
+                        android:paddingHorizontal="6dp"
+                        android:text="@string/show_setting_preset_recommend"
+                        android:visibility="gone"
+                        android:textColor="#CE27FB"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/basicLowDeviceDes"
+                        app:layout_constraintStart_toEndOf="@id/basicLowDeviceDes"
+                        app:layout_constraintTop_toTopOf="@id/basicLowDeviceDes" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/basicChooseItemNormalNetwork"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/show_setting_preset_item_bg"
+                    android:paddingHorizontal="16dp"
+                    android:paddingVertical="14dp"
+                    app:layout_constraintTop_toBottomOf="@id/basicChooseItemGoodNetwork">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="@string/show_network_quailty_normal"
+                        android:textColor="#040A25"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:layout_width="130dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:drawableStart="@mipmap/show_setting_preset_ic_android"
+                        android:drawablePadding="5dp"
+                        android:gravity="center_vertical"
+                        android:text="@string/show_network_quailty_normal_tag"
                         android:textColor="#6D7291"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
