--- a/Android/scenes/ktv/src/main/res/layout/fragment_profile.xml
+++ b/Android/scenes/ktv/src/main/res/layout/fragment_profile.xml
@@ -174,6 +174,7 @@
             android:button="@null"
             android:checked="false"
             android:text="超高音质"
+            android:visibility="gone"
             app:layout_constraintTop_toTopOf="@+id/tvMode"
             app:layout_constraintBottom_toBottomOf="@+id/tvMode"
             app:layout_constraintEnd_toEndOf="parent"
