--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_dialog_music_setting.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_dialog_music_setting.xml
@@ -180,6 +180,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:gravity="center"
+        android:visibility="gone"
         android:orientation="horizontal">
 
         <TextView
