--- a/Android/scenes/show/src/main/res/layout/show_setting_preset_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_setting_preset_dialog.xml
@@ -506,6 +506,19 @@
                     app:layout_constraintStart_toStartOf="@id/tvDeviceScore"
                     app:layout_constraintTop_toBottomOf="@id/tvDeviceScore"/>
 
+                <TextView
+                    android:id="@+id/tvBeautyTips"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:text="@string/show_beauty_tips"
+                    android:textSize="15dp"
+                    android:textColor="@color/black"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="@id/tvBroadcastTips"
+                    app:layout_constraintTop_toBottomOf="@id/tvBroadcastTips"/>
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
