--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_detail_activity.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_detail_activity.xml
@@ -101,19 +101,46 @@
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:layout_marginBottom="38dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         android:src="@drawable/pure1v1_room_detail_setting"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
-    <io.agora.scene.pure1v1.ui.CallDraggableView
-        android:id="@+id/vDragWindow"
-        android:layout_width="@dimen/pure1v1_drag_view_width"
-        android:layout_height="@dimen/pure1v1_drag_view_height"
-        android:layout_marginTop="126dp"
-        android:layout_marginEnd="25dp"
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <io.agora.scene.pure1v1.ui.CallDraggableView
+            android:id="@+id/vDragWindow"
+            android:layout_gravity="right"
+            android:layout_width="@dimen/pure1v1_drag_view_width"
+            android:layout_height="@dimen/pure1v1_drag_view_height"
+            android:layout_marginTop="126dp"
+            android:layout_marginEnd="25dp"
+            />
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/flDashboard"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        android:visibility="invisible"
+        >
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivClose"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_gravity="end"
+            android:elevation="2dp"
+            android:padding="10dp"
+            android:src="@drawable/pure1v1_dashboard_close"
+            />
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
