--- a/Android/scenes/show/src/main/res/layout/show_setting_preset_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_setting_preset_dialog.xml
@@ -52,6 +52,7 @@
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/deviceSelector"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
