--- a/Android/scenes/show/src/main/res/layout/show_live_link_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_dialog.xml
@@ -11,11 +11,11 @@
         android:id="@+id/radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
         android:layout_marginTop="23dp"
         android:orientation="horizontal"
         android:checkedButton="@id/rBtnRequestMessage"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatRadioButton
