--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_game_active_view.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_game_active_view.xml
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="3dp"
-            android:text="下轮由"
+            android:text="@string/ktv_next_round"
             android:textSize="12dp"
             android:textColor="@color/white"/>
         <ImageView
@@ -84,7 +84,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="3dp"
-            android:text="xxx 演唱"
             android:textSize="12dp"
             android:textColor="@color/white"/>
     </LinearLayout>
