--- a/Android/scenes/show/src/main/res/layout/show_setting_preset_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_setting_preset_dialog.xml
@@ -508,6 +508,17 @@
                     app:layout_constraintTop_toBottomOf="@id/tvDeviceScore"/>
 
                 <TextView
+                    android:id="@+id/tvBroadcastHeader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/show_broadcast_header"
+                    android:textSize="15dp"
+                    android:textColor="@color/black"
+                    app:layout_constraintStart_toStartOf="@id/tvBeautyTips"
+                    app:layout_constraintTop_toBottomOf="@id/tvBeautyTips"/>
+
+                <TextView
                     android:id="@+id/tvBroadcastTips"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -515,7 +526,7 @@
                     android:text="@string/show_broadcast_tips"
                     android:textSize="15dp"
                     android:textColor="@color/black"
-                    app:layout_constraintStart_toStartOf="@id/tvBeautyTips"
+                    app:layout_constraintStart_toEndOf="@id/tvBroadcastHeader"
                     app:layout_constraintTop_toBottomOf="@id/tvBeautyTips"/>
 
 
