--- a/Android/app/src/main/res/layout/app_activity_welcome.xml
+++ b/Android/app/src/main/res/layout/app_activity_welcome.xml
@@ -8,8 +8,8 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivAppLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="191dp"
         android:src="@mipmap/app_welcome_app_logo"
         app:layout_constraintEnd_toEndOf="parent"
