--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
@@ -83,9 +83,10 @@
         android:id="@+id/ivClose"
         android:layout_width="44dp"
         android:layout_height="44dp"
-        android:layout_gravity="end"
         android:elevation="2dp"
         android:padding="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/show_to1v1_detail_close" />
 
     <androidx.appcompat.widget.AppCompatImageView
