--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_list_empty_view.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_list_empty_view.xml
@@ -9,12 +9,6 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/show_to1v1_bg" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="44dp"
         android:src="@drawable/show_to1v1_empty"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +17,7 @@
     <View
         android:id="@+id/vContent"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="260dp"
         android:background="@drawable/show_to1v1_bottom_dialog_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +26,7 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="106dp"
         android:layout_height="100dp"
-        android:src="@drawable/show_to1v1_icon_create"
+        android:background="@drawable/show_to1v1_icon_create"
         app:layout_constraintStart_toStartOf="@+id/vContent"
         app:layout_constraintTop_toTopOf="@+id/vContent" />
 
