--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_list_fragment.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_list_fragment.xml
@@ -9,14 +9,13 @@
         android:id="@+id/ivBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:scaleType="fitXY" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="90dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginHorizontal="15dp"
         android:layout_marginBottom="82dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="0dp">
@@ -135,7 +134,7 @@
             tools:text="房间主题" />
 
         <FrameLayout
-            android:id="@+id/layoutBroadcastContainer"
+            android:id="@+id/layoutVideoContainer"
             android:layout_width="109dp"
             android:layout_height="163dp"
             android:layout_marginTop="10dp"
@@ -150,9 +149,9 @@
             android:layout_height="40dp"
             android:layout_marginTop="40dp"
             android:src="@drawable/show_to1v1_come_soon"
-            app:layout_constraintEnd_toEndOf="@id/layoutBroadcastContainer"
-            app:layout_constraintStart_toStartOf="@id/layoutBroadcastContainer"
-            app:layout_constraintTop_toTopOf="@id/layoutBroadcastContainer" />
+            app:layout_constraintEnd_toEndOf="@id/layoutVideoContainer"
+            app:layout_constraintStart_toStartOf="@id/layoutVideoContainer"
+            app:layout_constraintTop_toTopOf="@id/layoutVideoContainer" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvComeSoon"
@@ -163,9 +162,9 @@
             android:text="@string/show_to1v1_come_soon"
             android:textColor="@color/white"
             android:textSize="13sp"
-            app:layout_constraintEnd_toEndOf="@id/layoutBroadcastContainer"
-            app:layout_constraintStart_toStartOf="@id/layoutBroadcastContainer"
-            app:layout_constraintTop_toTopOf="@id/layoutBroadcastContainer" />
+            app:layout_constraintEnd_toEndOf="@id/layoutVideoContainer"
+            app:layout_constraintStart_toStartOf="@id/layoutVideoContainer"
+            app:layout_constraintTop_toTopOf="@id/layoutVideoContainer" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
